--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
+#I use MYSQL Database however you can use any database
+#You should change these properties relative to yours'
 jdbc.driverClassName = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/ahc
 jdbc.username = root
 jdbc.password = 1234567a
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-#hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=update
 hibernate.show_sql = true
 hibernate.format_sql = true
